# matrix-advisor

./: extral.docx  podsumowanie_teams.docx  zlecenia-przyklad-extral.xlsx
tools/matrix-advisor-poc/: .gitignore  README.md  pyproject.toml
tools/matrix-advisor-poc/src/matrix_advisor/: __init__.py  cli.py  config.py  db.py  models.py
tools/matrix-advisor-poc/src/matrix_advisor/api/: server.py
tools/matrix-advisor-poc/src/matrix_advisor/dxf/: __init__.py  contour_builder.py  dimensions.py  entity_pruner.py  parser.py  pipeline.py  profile_selector.py  renderer.py
tools/matrix-advisor-poc/src/matrix_advisor/embeddings/: encoder.py
tools/matrix-advisor-poc/src/matrix_advisor/eval/: dxf_pictogram_eval.py  sample_selector.py
tools/matrix-advisor-poc/src/matrix_advisor/features/: dimensional.py  geometric.py
tools/matrix-advisor-poc/src/matrix_advisor/index/: builder.py
tools/matrix-advisor-poc/src/matrix_advisor/ingestion/: import_csv.py  import_extral_json.py  sample_data.py
tools/matrix-advisor-poc/src/matrix_advisor/normalization/: pipeline.py
tools/matrix-advisor-poc/src/matrix_advisor/query/: by_dxf_service.py  dimensions_service.py  dxf_preview_service.py  scoring.py  service.py  (+3 more)
tools/matrix-advisor-poc/tests/: sample_data.py  test_api_extral.py  test_dxf_parser.py  test_dxf_preview.py  test_pipeline.py  test_query_by_dxf.py  test_query_by_image.py  test_scoring.py
tools/matrix-advisor-poc/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
tools/matrix-advisor-poc/web/src/: App.tsx  index.css
(+78 files in other folders)
